# TimeScribe

./: .gitignore  LICENSE  README.md  ROADMAP.md  THIRD-PARTY-NOTICES.md  build_mcpb.py  fetch_aw.py  installer.iss  launcher.py  mcp.spec  mcp_launcher.py  pad.spec  pyproject.toml  setup.ps1
timescribe/: __main__.py  activitywatch.py  app.py  appconfig.py  aw_manager.py  browsers.py  cli.py  digest.py  drafts.py  history.py  inference.py  llm.py  mcp_server.py  scheduler.py  server.py
timescribe/oauth/: pkce.py
timescribe/psa/: __init__.py  adapter.py  halo.py
timescribe/ui/: index.html  manifest.webmanifest
